feat: implement initial application structure with core UI components and internationalization

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -19,7 +19,110 @@
         "delete_confirm": "Delete Project?",
         "delete_message": "This action cannot be undone.",
         "delete_button": "Delete",
-        "delete_success": "Project deleted successfully."
+        "delete_success": "Project deleted successfully.",
+        "hello": "Hello, {{name}}",
+        "subtitle": "Ready to create your next viral video?",
+        "create_magic": "Create Magic",
+        "recent_projects": "Recent Projects",
+        "syncing": "Syncing...",
+        "projects_count": "{{count}} project",
+        "projects_count_plural": "{{count}} projects",
+        "loading_projects": "Loading your projects...",
+        "no_projects_title": "No projects yet",
+        "no_projects_desc": "Your studio is empty. Start your first automated workflow to generate scripts, images, and voiceovers in seconds.",
+        "start_project": "Start your first project",
+        "progress": "Progress"
+    },
+    "input": {
+        "title": "Create Your Story",
+        "subtitle": "AI Director, Cinematographer, and Narrator.\nAll in one place.",
+        "concept_title": "Concept & Script",
+        "concept_subtitle": "What's this video about?",
+        "topic_placeholder": "e.g. A cyberpunk detective searching for his lost android cat in Neo-Tokyo...",
+        "output_language": "Output Language",
+        "target_duration": "Target Duration (Sec)",
+        "scene_count": "Scene Count",
+        "auto": "Auto",
+        "leave_empty_auto": "(Leave empty for Auto)",
+        "visual_style": "Visual Style",
+        "visual_style_subtitle": "Choose the aesthetic for your storyboard.",
+        "character_consistency": "Character Consistency",
+        "new_character": "New Character",
+        "add_char_title": "Add New Character",
+        "char_name_placeholder": "Character Name (e.g. Neo)",
+        "char_desc_placeholder": "Visual Description (e.g. A tall man in a black trench coat...)",
+        "save_character": "Save Character",
+        "no_char": "No Char",
+        "audio_studio": "Audio Studio",
+        "audio_subtitle": "Select the narrator and soundtrack.",
+        "voice_model": "Voice Model",
+        "no_voices": "No voices available for this language",
+        "background_music": "Background Music",
+        "music_subtitle": "AI Generated soundtrack (Instrumental)",
+        "generate_button": "Generate Video Workflow",
+        "generating": "Generating Script & Scenes...",
+        "processing": "Processing...",
+        "daily_limit": "Daily Limit: 1 Video for Free Plan",
+        "chars_count": "{{count}} chars"
+    },
+    "script": {
+        "metadata_title": "YouTube Shorts Metadata",
+        "viral_title": "Viral Title",
+        "generating_title": "Generating title...",
+        "description_hashtags": "Description & Hashtags",
+        "generating_desc": "Generating description...",
+        "copied": "Copied",
+        "copy": "Copy",
+        "original_concept": "Original Concept & Prompt",
+        "selected_style": "Selected Style",
+        "user_prompt": "User Prompt",
+        "untitled_project": "Untitled Project",
+        "loading_voices": "Loading...",
+        "no_voices": "No voices",
+        "apply_voice": "Apply Voice",
+        "stop": "Stop",
+        "generate_all": "Generate All",
+        "preview": "Preview",
+        "export_assets": "Export Assets",
+        "background_music": "Background Music",
+        "play_music": "Play Music",
+        "project_details": "Project Details & Metadata",
+        "hide_details": "Hide Details",
+        "view_details": "View Script Prompt & SEO Tags",
+        "workflow_progress": "Workflow Progress",
+        "adding_scene": "Adding Scene...",
+        "add_new_scene": "Add New Scene",
+        "workflow_paused": "Workflow Paused",
+        "backend_paused": "The backend has paused processing.",
+        "abort": "Abort",
+        "skip": "Skip",
+        "resume": "Resume",
+        "veo_high_quality": "Veo 2.0 (High Quality)",
+        "veo_preview": "Veo 3.0 (Preview)",
+        "veo_fast": "Veo 3.0 (Fast)"
+    },
+    "scene": {
+        "regenerate_title": "Regenerate {{type}}?",
+        "regenerate_confirm": "This will overwrite the existing file. Are you sure you want to continue?",
+        "regenerate_action": "Regenerate",
+        "generating_video": "Generating Video...",
+        "generating_image": "Generating Image...",
+        "failed_load": "Failed to load media.",
+        "scene_number": "Scene {{number}}",
+        "remove_scene": "Remove Scene",
+        "switch_to_image": "Switch to Image",
+        "switch_to_video": "Switch to Video",
+        "video_label": "VIDEO",
+        "image_label": "IMAGE",
+        "veo_label": "VEO 2",
+        "regenerate_image": "Regenerate Image",
+        "animate_veo": "Animate with Veo 2",
+        "narration": "Narration",
+        "regenerate_audio": "Regenerate Audio",
+        "visual_prompt": "Visual Prompt",
+        "type_image": "Image",
+        "type_audio": "Audio",
+        "type_video": "Video"
     },
     "common": {
         "cancel": "Cancel",
@@ -28,6 +131,31 @@
         "saving": "Saving...",
         "error": "Error",
         "success": "Success",
+        "delete": "Delete",
         "loading": "Loading..."
+    },
+    "settings": {
+        "title": "User Settings",
+        "language": "Language / Idioma",
+        "api_config": "API Configuration",
+        "gemini_label": "Google Gemini API Key (Required)",
+        "gemini_help": "Get your key from Google AI Studio.",
+        "elevenlabs_label": "ElevenLabs API Key (Optional)",
+        "elevenlabs_help": "Used for ultra-realistic voice cloning.",
+        "groq_label": "Groq API Key (Optional)",
+        "groq_help": "Used for fast TTS via PlayAI models.",
+        "suno_label": "Suno API Key (Optional)",
+        "suno_help": "Uses SunoAPI.org structure.",
+        "security_note": "Keys are encrypted client-side and stored securely. They are only decrypted for API calls."
+    },
+    "auth": {
+        "preparing_login": "Preparing login...",
+        "sign_in_google": "Sign in with Google",
+        "authenticating": "Authenticating...",
+        "welcome_title": "Welcome to ShortsAI",
+        "welcome_subtitle": "Create viral vertical videos with Gemini 2.5",
+        "continue_admin": "Continue as Admin User",
+        "backend_connected": "Connected to Backend • Admin Mode",
+        "secure_login": "Secure Login via Google"
     }
 }
