--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -19,7 +19,110 @@
         "delete_confirm": "Excluir Projeto?",
         "delete_message": "Esta ação não pode ser desfeita.",
         "delete_button": "Excluir",
-        "delete_success": "Projeto excluído com sucesso."
+        "delete_success": "Projeto excluído com sucesso.",
+        "hello": "Olá, {{name}}",
+        "subtitle": "Pronto para criar seu próximo vídeo viral?",
+        "create_magic": "Criar Mágica",
+        "recent_projects": "Projetos Recentes",
+        "syncing": "Sincronizando...",
+        "projects_count": "{{count}} projeto",
+        "projects_count_plural": "{{count}} projetos",
+        "loading_projects": "Carregando seus projetos...",
+        "no_projects_title": "Nenhum projeto ainda",
+        "no_projects_desc": "Seu estúdio está vazio. Inicie seu primeiro fluxo de trabalho automatizado para gerar roteiros, imagens e locuções em segundos.",
+        "start_project": "Começar seu primeiro projeto",
+        "progress": "Progresso"
+    },
+    "input": {
+        "title": "Crie Sua História",
+        "subtitle": "Diretor de IA, Diretor de Fotografia e Narrador.\nTudo em um só lugar.",
+        "concept_title": "Conceito & Roteiro",
+        "concept_subtitle": "Sobre o que é este vídeo?",
+        "topic_placeholder": "ex: Um detetive cyberpunk procurando seu gato androide perdido em Neo-Tokyo...",
+        "output_language": "Idioma de Saída",
+        "target_duration": "Duração Alvo (Seg)",
+        "scene_count": "Contagem de Cenas",
+        "auto": "Auto",
+        "leave_empty_auto": "(Deixe vazio para Auto)",
+        "visual_style": "Estilo Visual",
+        "visual_style_subtitle": "Escolha a estética para seu storyboard.",
+        "character_consistency": "Consistência de Personagem",
+        "new_character": "Novo Personagem",
+        "add_char_title": "Adicionar Novo Personagem",
+        "char_name_placeholder": "Nome do Personagem (ex: Neo)",
+        "char_desc_placeholder": "Descrição Visual (ex: Um homem alto em um sobretudo preto...)",
+        "save_character": "Salvar Personagem",
+        "no_char": "Sem Personagem",
+        "audio_studio": "Estúdio de Áudio",
+        "audio_subtitle": "Selecione o narrador e a trilha sonora.",
+        "voice_model": "Modelo de Voz",
+        "no_voices": "Sem vozes disponíveis para este idioma",
+        "background_music": "Música de Fundo",
+        "music_subtitle": "Trilha sonora gerada por IA (Instrumental)",
+        "generate_button": "Gerar Fluxo de Vídeo",
+        "generating": "Gerando Roteiro & Cenas...",
+        "processing": "Processando...",
+        "daily_limit": "Limite Diário: 1 Vídeo no Plano Gratuito",
+        "chars_count": "{{count}} caracteres"
+    },
+    "script": {
+        "metadata_title": "Metadados YouTube Shorts",
+        "viral_title": "Título Viral",
+        "generating_title": "Gerando título...",
+        "description_hashtags": "Descrição & Hashtags",
+        "generating_desc": "Gerando descrição...",
+        "copied": "Copiado",
+        "copy": "Copiar",
+        "original_concept": "Conceito Original & Prompt",
+        "selected_style": "Estilo Selecionado",
+        "user_prompt": "Prompt do Usuário",
+        "untitled_project": "Projeto Sem Título",
+        "loading_voices": "Carregando...",
+        "no_voices": "Sem vozes",
+        "apply_voice": "Aplicar Voz",
+        "stop": "Parar",
+        "generate_all": "Gerar Tudo",
+        "preview": "Pré-visualizar",
+        "export_assets": "Exportar Assets",
+        "background_music": "Música de Fundo",
+        "play_music": "Tocar Música",
+        "project_details": "Detalhes do Projeto & Metadados",
+        "hide_details": "Ocultar Detalhes",
+        "view_details": "Ver Prompt do Roteiro & Tags SEO",
+        "workflow_progress": "Progresso do Fluxo",
+        "adding_scene": "Adicionando Cena...",
+        "add_new_scene": "Adicionar Nova Cena",
+        "workflow_paused": "Fluxo Pausado",
+        "backend_paused": "O backend pausou o processamento.",
+        "abort": "Abortar",
+        "skip": "Pular",
+        "resume": "Retomar",
+        "veo_high_quality": "Veo 2.0 (Alta Qualidade)",
+        "veo_preview": "Veo 3.0 (Preview)",
+        "veo_fast": "Veo 3.0 (Rápido)"
+    },
+    "scene": {
+        "regenerate_title": "Regenerar {{type}}?",
+        "regenerate_confirm": "Isso substituirá o arquivo existente. Tem certeza que deseja continuar?",
+        "regenerate_action": "Regenerar",
+        "generating_video": "Gerando Vídeo...",
+        "generating_image": "Gerando Imagem...",
+        "failed_load": "Falha ao carregar mídia.",
+        "scene_number": "Cena {{number}}",
+        "remove_scene": "Remover Cena",
+        "switch_to_image": "Mudar para Imagem",
+        "switch_to_video": "Mudar para Vídeo",
+        "video_label": "VÍDEO",
+        "image_label": "IMAGEM",
+        "veo_label": "VEO 2",
+        "regenerate_image": "Regenerar Imagem",
+        "animate_veo": "Animar com Veo 2",
+        "narration": "Narração",
+        "regenerate_audio": "Regenerar Áudio",
+        "visual_prompt": "Prompt Visual",
+        "type_image": "Imagem",
+        "type_audio": "Áudio",
+        "type_video": "Vídeo"
     },
     "common": {
         "cancel": "Cancelar",
@@ -28,6 +131,31 @@
         "saving": "Salvando...",
         "error": "Erro",
         "success": "Sucesso",
+        "delete": "Excluir",
         "loading": "Carregando..."
+    },
+    "settings": {
+        "title": "Configurações do Usuário",
+        "language": "Idioma / Language",
+        "api_config": "Configuração de API",
+        "gemini_label": "Chave API Google Gemini (Obrigatório)",
+        "gemini_help": "Obtenha sua chave no Google AI Studio.",
+        "elevenlabs_label": "Chave API ElevenLabs (Opcional)",
+        "elevenlabs_help": "Usado para clonagem de voz ultra-realista.",
+        "groq_label": "Chave API Groq (Opcional)",
+        "groq_help": "Usado para TTS rápido via modelos PlayAI.",
+        "suno_label": "Chave API Suno (Opcional)",
+        "suno_help": "Usa a estrutura SunoAPI.org.",
+        "security_note": "As chaves são criptografadas no cliente e armazenadas com segurança. Elas são descriptografadas apenas para chamadas de API."
+    },
+    "auth": {
+        "preparing_login": "Preparando login...",
+        "sign_in_google": "Entrar com Google",
+        "authenticating": "Autenticando...",
+        "welcome_title": "Bem-vindo ao ShortsAI",
+        "welcome_subtitle": "Crie vídeos verticais virais com Gemini 2.5",
+        "continue_admin": "Continuar como Administrador",
+        "backend_connected": "Conectado ao Backend • Modo Admin",
+        "secure_login": "Login Seguro via Google"
     }
 }
