--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -11,6 +11,16 @@
         "settings": "Configurações",
         "logout": "Sair"
     },
+    "folders": {
+        "title": "Pastas",
+        "all_projects": "Todos os Projetos",
+        "new_folder_placeholder": "Nome da pasta...",
+        "rename": "Renomear",
+        "delete": "Excluir",
+        "delete_confirm": "Excluir esta pasta? Os projetos serão movidos para \"Todos os Projetos\".",
+        "move_to_folder": "Mover para Pasta",
+        "root_folder": "Todos os Projetos (Raiz)"
+    },
     "dashboard": {
         "title": "Seus Projetos",
         "new_project": "Novo Projeto",
