--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -19,7 +19,8 @@
         "delete": "Excluir",
         "delete_confirm": "Excluir esta pasta? Os projetos serão movidos para \"Todos os Projetos\".",
         "move_to_folder": "Mover para Pasta",
-        "root_folder": "Todos os Projetos (Raiz)"
+        "root_folder": "Todos os Projetos (Raiz)",
+        "home": "Início"
     },
     "dashboard": {
         "title": "Seus Projetos",
