--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -20,7 +20,7 @@
         "delete_confirm": "Excluir esta pasta? Os projetos serão movidos para \"Todos os Projetos\".",
         "move_to_folder": "Mover para Pasta",
         "root_folder": "Todos os Projetos (Raiz)",
-        "home": "Início",
+        "home": "Home",
         "archive": "Arquivar",
         "unarchive": "Desarquivar"
     },
