feat: Add Portuguese (Brazil) localization file.

--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -263,7 +263,7 @@
             "add_scene": "Precisa de mais conteúdo? Adicione uma nova cena manual.",
             "generate_all": "Gera todas as mídias (imagens e áudio) para as cenas pendentes.",
             "preview": "Veja como está ficando seu vídeo antes de exportar.",
-            "export": "Tudo pronto? Baixe o vídeo final e os recursos.",
+            "export": "Tudo pronto? Baixe os recursos base como imagens e áudio.",
             "scene_regen_image": "Não gostou da imagem? Clique para gerar uma nova versão usando o prompt visual.",
             "scene_edit_narration": "Edite o texto da narração manualmente. O áudio deve ser gerado novamente se alterar o texto.",
             "scene_regen_audio": "Regere apenas o áudio desta cena. Necessário após editar o texto.",
