--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -288,7 +288,8 @@
         "preview": {
             "player": "Aqui você assiste ao resultado final. O vídeo é montado em tempo real.",
             "controls": "Controle a reprodução, pause e navegue pelas cenas.",
-            "export_btn": "Clique aqui para abrir as opções de exportação e download.",
+            "export_btn": "Clique aqui para exportar.",
+            "export_btn_instruction": "Clique neste botão de baixar agora para abrir as opções, e depois clique em Próximo no tour.",
             "subtitles": "Ative ou desative as legendas automáticas.",
             "resolution": "Escolha entre 1080p (qualidade máxima) ou 720p (arquivo menor).",
             "export_format_step": "MP4 é mais compatível (Instagram/TikTok). WebM é mais rápido.",
