refactor: Migrate video export to server-side rendering and introduce internationalization files with an .env example.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -200,7 +200,7 @@
         "resolution": "Resolution",
         "resolution_note": "Resolution: 1080x1920 (9:16 Vertical)",
         "format": "Format",
-        "mp4_not_supported": "MP4 export is not supported by your browser. Please use WebM.",
+        "mp4_not_supported": "MP4 is the standard format for server-side exports.",
         "merge_video": "Merge Ending Video",
         "upload_placeholder": "Upload a vertical video (1080x1920) to play after the generated content.",
         "cancel": "Cancel",
@@ -209,12 +209,12 @@
         "exporting": "Exporting Video",
         "est_time": "Est. time:",
         "warning_tab": "Keep this tab active.",
-        "warning_desc": "Switching tabs may pause the renderer and cause the video to freeze or desync.",
+        "warning_desc": "Rendering happens on the server. You can safely switch tabs.",
         "tips_title": "Export Tips",
-        "tip_performance": "Rendering time varies by your computer's hardware. More powerful PCs process faster.",
+        "tip_performance": "Rendering is done on the server, not using your PC resources.",
         "tip_quality": "Choose between 30 or 60 FPS. We export in 1080x1920 (Full HD) for maximum compatibility.",
         "tip_format": "MP4 offers better compatibility. WebM is faster but some editors may not support it.",
-        "tip_stay": "Keep the tab active throughout the process to avoid encoding pauses.",
+        "tip_stay": "You will be notified once the video is ready.",
         "frame_rate": "Frame Rate (FPS)",
         "fps_hint": "60 FPS = smoother. 30 FPS = smaller file."
     },
@@ -284,7 +284,7 @@
             "export_resolution_step": "1080p for max quality or 720p for lighter files.",
             "export_fps_step": "60 FPS for smoother motion. 30 FPS for smaller size.",
             "export_merge_step": "Append an outro video automatically at the end.",
-            "export_confirm_step": "Click here to start rendering in your browser."
+            "export_confirm_step": "Click here to request video rendering on the server."
         }
     }
 }
