--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -201,7 +201,7 @@
         "resolution": "Resolução",
         "resolution_note": "Resolução: 1080x1920 (9:16 Vertical)",
         "format": "Formato",
-        "mp4_not_supported": "Exportação MP4 não suportada pelo navegador. Use WebM.",
+        "mp4_not_supported": "MP4 is the standard format for server-side exports.",
         "merge_video": "Unir Vídeo Final",
         "upload_placeholder": "Envie um vídeo vertical (1080x1920) para tocar após o conteúdo gerado.",
         "cancel": "Cancelar",
@@ -216,12 +216,12 @@
         "encoding_audio": "Encoding áudio...",
         "encoding_video": "Encoding video ({{percent}}%)...",
         "warning_tab": "Mantenha esta aba ativa.",
-        "warning_desc": "Trocar de aba pode pausar o renderizador e causar congelamento ou dessincronia.",
+        "warning_desc": "A renderização ocorre no servidor. Você pode continuar usando outras janelas.",
         "tips_title": "Dicas de Exportação",
-        "tip_performance": "O tempo de renderização varia de acordo com seu computador. PCs mais potentes processam mais rápido.",
+        "tip_performance": "A renderização é feita no servidor, não consumindo recursos do seu PC.",
         "tip_quality": "Escolha entre 30 ou 60 FPS. Exportamos em 1080x1920 (Full HD) para máxima compatibilidade.",
         "tip_format": "MP4 oferece melhor compatibilidade. WebM é mais rápido mas alguns editores não aceitam.",
-        "tip_stay": "Mantenha a aba ativa durante todo o processo para evitar pausas no encoding.",
+        "tip_stay": "Você será notificado assim que o vídeo estiver pronto.",
         "frame_rate": "Taxa de Quadros (FPS)",
         "fps_hint": "60 FPS = mais fluido. 30 FPS = arquivo menor."
     },
@@ -296,7 +296,7 @@
             "export_resolution_step": "1080p para qualidade máxima ou 720p para arquivos mais leves.",
             "export_fps_step": "60 FPS para movimentos fluídos. 30 FPS para tamanho menor.",
             "export_merge_step": "Adicione um vídeo de encerramento (outro) automático ao final.",
-            "export_confirm_step": "Clique aqui para iniciar a renderização no seu navegador."
+            "export_confirm_step": "Clique aqui para solicitar a renderização do vídeo no servidor."
         }
     },
     "quota": {
